# pokeautumn

./: CMakeLists.txt
src/: main.cxx
src/pokeautumn/: battlefield.hpp  debug.hpp  engine.cpp  engine.hpp  enginebattle.hpp  enginemove.cpp  enginemove.hpp  engineparty.hpp  enginepokemon.hpp  enginerandom.hpp  export.h
src/pokeautumn/generations/1/: battle.cpp  battle.hpp  engine.hpp  generation1.cpp  moves.cpp  moves.hpp  pokemon.cpp  pokemon.hpp  pokemonstats.cpp  pokemonstats.hpp  types.cpp  types.hpp
src/pokeautumn/generations/1/moves/: none.hpp  scratch.hpp  tackle.hpp
src/pokemon/: generation.hpp  move.hpp  party.cpp  party.hpp  pokemon.hpp  species.hpp
src/pokemon/data/: move.hpp  movetype.hpp  nature.cpp  nature.hpp  species.hpp  speciesdata.hpp  stattype.hpp  type.hpp
